--- a/index.html
+++ b/index.html
@@ -6,25 +6,8 @@
 </head>
 <body>
 
-<h1> Hello everyone</h1>
+<h1> Hello world</h1>
 
   <h2> Welcome to my site!</h2>
-
-  <h2><em>What do you need to create a website?</em></h2>
-
-<div id="not-much">
-<p>
-  Not much!
-
-</div>
-
-<div>
-  <ol>
-    <li>A computer (always a good start)</li>
-    <li>A text editor (I am using atom)</li>
-    <li>A web browser (I am using chrome)</li>
-  </ol>
-
-<div/>
 </body>
 </html>
