--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <title>First site</title>
-<link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
 
@@ -10,7 +9,7 @@
 
   <h2> Welcome to my site!</h2>
 
-  <h2><em>What do you need to create a website?</em></h2>
+  <h2>What do you need to create a website?</h2>
 
 <p>
   Not much!
