add one more list

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <li>A computer (always a good start)</li>
     <li>A text editor (I am using atom)</li>
     <li>A web browser (I am using chrome)</li>
+    <li>and more</li>
   </ol>
 
 <div/>
